# TodoApp-Rust

./: .env  .gitignore  Cargo.toml  LICENSE  build.rs  package-lock.json  package.json  readme.md  trunk.toml
src/: main.rs
src/components/: header.rs
src/context/: auth.rs
src/screens/: counter.rs  home.rs  login.rs  mod.rs  my_screen.rs  register.rs  todo.rs
src/styles/: output.css
src/types/: mod.rs
src/utils/: mod.rs
